# genee-test

./: .env  .gitignore  README.md  docker-compose.yml
back/: .python-version  Dockerfile  README.md  pyproject.toml
back/envs/dev/: docker-compose.yml
back/envs/dev/back/: Dockerfile  back-start.sh
back/shared/: create.sql
back/src/: envconfig.py  main.py  requirements.txt  uwsgi.ini
back/src/data/case/controllers/: __init__.py  case_controller.py
back/src/data/case/models/: __init__.py  case_model.py
back/src/data/case/schemas/: __init__.py  case_schema.py
back/src/data/case/services/: __init__.py  case_service.py
back/src/data/place/controllers/: __init__.py  place_controller.py
back/src/data/place/models/: __init__.py  place_model.py
back/src/data/place/schemas/: __init__.py  place_schema.py
back/src/data/place/services/: place_service.py
back/src/utils/: __init__.py  base_schema.py  mongoconfig.py
front/: README.md  dockerfile  entrypoint_dev.sh  package-lock.json  package.json  vite.config.js
front/src/: App.css  App.jsx  Place.jsx  interface.ts
