[project]
name = 'gt-back'
version = '1.0.0'
description = 'Backend for the Genee test.'
requires-python = '>=3.11'
dependencies = [
    'alembic',
    'psycopg2',
    'Flask',
    'flask-blueprint',
    'Flask-Cors',
    'Flask-Migrate',
    'marshmallow',
    'marshmallow-sqlalchemy',
    'requests',
    'SQLAlchemy',
    'uWSGI',
    'load_dotenv',
    'pytest',
    "pymongo"
]

[pyproject.optional-dependencies]
dev = [
    'debugpy'
]

[tool.setuptools]
py-modules = []

[tool.black]
line-length = 120

[tool.isort]
profile = 'black'